# Dictionary

Dictionary/: CMakeLists.txt  dictionary.cpp  dictionary.h  handleconsoleoperations.cpp  handleconsoleoperations.h  main.cpp
Dictionary/include/: dictionary.h  handleconsoleoperations.h
Dictionary/src/: dictionary.cpp  handleconsoleoperations.cpp
Dictionary/tests/: CMakeLists.txt  DictionaryTest.cpp  main.cpp
